# autonomous-stack-sdc

./: .gitignore  README.md  install_dependencies.sh  minsk  minsk.pub
control/: CMakeLists.txt
control/config/: pid_params.yaml
control/launch/: pid.launch.py
control/src/: pid.cpp
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/clustering/lib/clustering/: boundaryscan
install/clustering/share/ament_index/resource_index/package_run_dependencies/: clustering
install/clustering/share/clustering/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/control/lib/control/: pid
install/control/share/ament_index/resource_index/package_run_dependencies/: control
install/control/share/ament_index/resource_index/parent_prefix_path/: control
install/control/share/control/: package.sh  package.xml
install/ground_removal/lib/ground_removal/: janeremover.py  lu  simpleZ
install/ground_removal/share/ament_index/resource_index/package_run_dependencies/: ground_removal
install/ground_removal/share/ground_removal/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/ground_removal/share/ground_removal/cmake/: ground_removalConfig.cmake
install/ground_removal/share/ground_removal/config/: lu_params.yaml  simpleZ_sim_params.yaml
install/ground_removal/share/ground_removal/launch/: simpleZ.launch.py
install/mapping1/lib/mapping1/: colorMappingwoRTab
install/mapping1/share/ament_index/resource_index/package_run_dependencies/: mapping1
install/mapping1/share/mapping1/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/mapping1/share/mapping1/cmake/: mapping1Config.cmake
install/mapping1/share/mapping1/launch/: simpleMapping.launch.py
install/odometry/share/ament_index/resource_index/package_run_dependencies/: odometry
install/odometry/share/odometry/: local_setup.dsv  local_setup.sh  package.dsv  package.ps1  package.sh  package.xml
install/odometry/share/odometry/launch/: deadReckoning.launch.py
install/path_planning1/lib/path_planning1/: coneLineViz  midPointOriginal.py
install/path_planning1/share/ament_index/resource_index/package_run_dependencies/: path_planning1
install/path_planning1/share/path_planning1/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/path_planning1/share/path_planning1/cmake/: path_planning1Config.cmake
install/path_planning1/share/path_planning1/config/: midPointColored_params.yaml  midPointErrorPropogator_params.yaml  midPoint_params.yaml
install/path_planning1/share/path_planning1/launch/: midPointColored.launch.py
install/sdc_msgs/include/sdc_msgs/sdc_msgs/msg/: arr.h  arr.hpp  arrofarr.h  coordinate.hpp  coordinate_list.hpp  rosidl_typesupport_fastrtps_c__visibility_control.h
install/sdc_msgs/include/sdc_msgs/sdc_msgs/msg/detail/: arr__builder.hpp  arr__rosidl_typesupport_fastrtps_cpp.hpp  arr__rosidl_typesupport_introspection_c.h  arr__struct.h  arr__type_support.c  arr__type_support.h  arrofarr__builder.hpp  arrofarr__functions.h  (+19 more)
install/sdc_msgs/share/ament_index/resource_index/rosidl_interfaces/: sdc_msgs
install/sdc_msgs/share/sdc_msgs/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/sdc_msgs/share/sdc_msgs/cmake/: ament_cmake_export_include_directories-extras.cmake  ament_cmake_export_libraries-extras.cmake  export_sdc_msgs__rosidl_generator_cExport-noconfig.cmake  export_sdc_msgs__rosidl_generator_cExport.cmake  export_sdc_msgs__rosidl_generator_cppExport.cmake  export_sdc_msgs__rosidl_generator_pyExport.cmake  rosidl_cmake_export_typesupport_libraries-extras.cmake  sdc_msgs__rosidl_typesupport_cExport-noconfig.cmake  sdc_msgs__rosidl_typesupport_cExport.cmake  sdc_msgs__rosidl_typesupport_cppExport-noconfig.cmake  sdc_msgs__rosidl_typesupport_introspection_cExport-noconfig.cmake  sdc_msgs__rosidl_typesupport_introspection_cExport.cmake
install/sdc_msgs/share/sdc_msgs/msg/: Arr.idl  Arrofarr.idl  Arrofarr.msg  Coordinate.idl  CoordinateList.idl
install/sensorfusion/lib/sensorfusion/: coord_to_arr  debug_overlay  fusion_test  sensor_fusion_node  sensor_fusion_node_old
install/sensorfusion/share/sensorfusion/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/yolo_bringup/share/yolo_bringup/: package.sh
install/yolo_bringup/share/yolo_bringup/cmake/: yolo_bringupConfig.cmake
install/yolo_bringup/share/yolo_bringup/launch/: yolov9.launch.py
install/yolo_msgs/share/yolo_msgs/: local_setup.sh  package.sh
install/yolo_ros/share/yolo_ros/: package.sh
log/: latest_build
path_planning1/: CMakeLists.txt  package.xml
path_planning1/launch/: midPoint.launch.py  midPointErrorPropogator.launch.py
path_planning1/src/: coneLineViz.cpp  midPoint.cpp  midPointColored.cpp  midPointErrorPropogator.cpp
perception/camera/yolo_ros/yolo_bringup/launch/: yolo.launch.py  yolov9.launch.py
perception/lidar/clustering/: CMakeLists.txt  package.xml
perception/lidar/clustering/src/: boundaryscan.cpp
perception/lidar/ground-removal/: CMakeLists.txt
perception/lidar/ground-removal/config/: lu_sim_params.yaml  simpleZ_params.yaml
perception/lidar/ground-removal/launch/: lu.launch.py
perception/lidar/ground-removal/scripts/: janeremoverhuh.py  janeremoverog.py
perception/lidar/ground-removal/src/: lu.cpp  simpleZ.cpp
perception/sensorfusion/: setup.py
perception/sensorfusion/sensorfusion/nodes/: fusion_node.py  fusion_test.py
sdc_msgs/: CMakeLists.txt
sdc_msgs/msg/: Coordinate.msg  CoordinateList.msg
slam/core/mapping1/: CMakeLists.txt  package.xml
slam/core/mapping1/config/: colorMapping_params.yaml  simpleMapping_params.yaml
slam/core/mapping1/launch/: colorMapping.launch.py
slam/core/mapping1/src/: colorMapping.cpp  colorMapping2.cpp  colorMappingwoRTab.cpp  coloredMapping.cpp
slam/core/odometry/: CMakeLists.txt
slam/core/odometry/config/: deadReckoning_params.yaml
slam/core/odometry/src/: deadReckoning.cpp
(+4 files in other folders)
